# wooting-analog-midi

./: .gitignore  Cargo.toml  LICENSE  README.md  craco.config.js  package.json  tsconfig.json  webpack.config.js
.github/workflows/: publish.yml  tests.yml
public/: index.html
src/: App.tsx  backend.ts  index.css  index.tsx  main.rs  settings-context.tsx  state-context.tsx  tauriFunctions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  settings.rs
src/app/: HidCodes.ts  backend.ts  index.tsx  settings-context.tsx  state-context.tsx
src/app/components/: Piano.tsx  PianoDisplay.tsx  piano-styles.css
src/app/utils/: notes.test.ts  notes.ts
src/components/: Header.tsx  MIDIStateDisplay.tsx  Piano.tsx  PianoDisplay.tsx  Settings.tsx  common.tsx
src/main/: main.ts
src/native/: .gitignore  Cargo.toml  index.d.ts  index.js
src/native/src/: app.rs  lib.rs  main.rs  settings.rs
wooting-analog-midi/: Cargo.toml
wooting-analog-midi-core/: Cargo.toml
wooting-analog-midi-core/src/: lib.rs
wooting-analog-midi/src/: lib.rs
