[package]
name = "wooting-analog-midi-app"
version = "0.1.0"
description = "Virtual MIDI input for Analog keyboards!"
authors = [ "simon-wh", "PastaJ36" ]
license = "MPL-2.0"
repository = ""
default-run = "wooting-analog-midi"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
env_logger = "0.7"
wooting-analog-midi = { path = "../wooting-analog-midi" }
lazy_static = "1.4"
anyhow = "1.0"

  [dependencies.tauri]
  version = "0.11"
  features = [ "all-api" ]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "wooting-analog-midi"
path = "src/main.rs"
