[package]
name = "wooting-analog-midi"
version = "0.2.0"
description = "Virtual MIDI input for Analog keyboards!"
authors = [ "simon-wh", "PastaJ36" ]
license = "MPL-2.0"
repository = ""
default-run = "wooting-analog-midi"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
env_logger = "0.8"
wooting-analog-midi-core = { path = "../wooting-analog-midi-core" }
lazy_static = "1.4"
anyhow = "1.0"
[dependencies.tauri]
version = "1.0.0-beta.1"
features = ["api-all"]


[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "wooting-analog-midi"
path = "src/main.rs"
