[package]
name = "wooting-analog-midi-core"
version = "0.1.0"
authors = ["simon-wh <simon.whyte.lb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.6"
# wooting-analog-wrapper = { path="../../wooting-analog-sdk/wooting-analog-wrapper" }
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk", branch = "feature/serde-derive" }
# ctrlc = { version = "3", features = ["termination"] }
log = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
# iced = "0.1"